--- a/Урок 2. Инструменты сборки/exp_gulp/src/main.scss
+++ b/Урок 2. Инструменты сборки/exp_gulp/src/main.scss
@@ -6,5 +6,5 @@ $primary-color: #333;
 body {
   font: 100% $font-stack;
   color: $primary-color;
-  background-color: yellow;
+  background-color: blue;
 }
